feat: implement searchNews with Specification-based dynamic filtering and sort parsing